Mac native buttons smaller and not centered after bug 1971369
Categories
(Core :: Widget: Cocoa, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr128 | --- | unaffected |
firefox139 | --- | unaffected |
firefox140 | --- | unaffected |
firefox141 | --- | fixed |
People
(Reporter: sam, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(3 files)
After bug 1971369 (per mozregression), Mac native styled buttons appear to be smaller, with text no longer centered vertically or horizontally. Attached screenshot illustrating the regression (top is pre-regression, bottom is post-regression).
Comment 1•1 day ago
|
||
Set release status flags based on info from the regressing bug 1971369
:emilio, since you are the author of the regressor, bug 1971369, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
Assignee | ||
Updated•1 day ago
|
Assignee | ||
Comment 2•1 day ago
|
||
D253206 changed the margins to use an IntMargin. However I didn't
realize the order was subtly different. The cocoa code was using left,
top, right, bottom, while IntMargin uses the CSS order (top, right,
bottom, left). So fix the order of the numbers to preserve previous
behavior.
Updated•1 day ago
|
Assignee | ||
Comment 3•1 day ago
|
||
Wrote while debugging. They're typedefs so this is just less confusing.
Updated•23 hours ago
|
https://hg.mozilla.org/mozilla-central/rev/de60bae5ab9b
https://hg.mozilla.org/mozilla-central/rev/36c907b1d8b7
Description
•