Bug 1973157 - Fix cocoa native rendering regression from bug 1971369. r=mac-reviewers,spohl

D253206 changed the margins to use an IntMargin. However I didn't
realize the order was subtly different. The cocoa code was using left,
top, right, bottom, while IntMargin uses the CSS order (top, right,
bottom, left). So fix the order of the numbers to preserve previous
behavior.

Differential Revision: https://phabricator.services.mozilla.com/D254496